[gd_scene load_steps=6 format=3 uid="uid://cwq2vtj71g3jg"]

[ext_resource type="Script" uid="uid://c087dgfpejbj4" path="res://states/entered/entered.gd" id="1_jjk2u"]
[ext_resource type="Script" uid="uid://c64fvn3p6v32y" path="res://states/entered/main.gd" id="2_cjx30"]
[ext_resource type="Script" uid="uid://dqkal84v3u8ep" path="res://classes/log/log.gd" id="2_ltgjr"]
[ext_resource type="Theme" uid="uid://bdbjie1ddqlm5" path="res://themes/main_theme.tres" id="3_wlfmh"]
[ext_resource type="PackedScene" uid="uid://7e1771outtfj" path="res://classes/windows/window.tscn" id="4_2c55y"]

[node name="Entered" type="Node"]
script = ExtResource("1_jjk2u")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Main" type="VBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("2_cjx30")

[node name="Title" type="RichTextLabel" parent="UI/Main"]
layout_mode = 2
theme_override_font_sizes/bold_font_size = 78
bbcode_enabled = true
text = "[center][b][rainbow]TowberGo![/rainbow][/b][/center]"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="UI/Main"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Login" type="VBoxContainer" parent="UI/Main/MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_wlfmh")
theme_override_constants/separation = 10

[node name="UserName" type="LineEdit" parent="UI/Main/MarginContainer/Login"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "UserName"

[node name="Password" type="LineEdit" parent="UI/Main/MarginContainer/Login"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Password"
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Main/MarginContainer/Login"]
layout_mode = 2

[node name="Login" type="Button" parent="UI/Main/MarginContainer/Login/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "Login
"

[node name="RegisterPrompt" type="RichTextLabel" parent="UI/Main/MarginContainer/Login"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Don't have an account?[url=register][b][color=#E3A071]Create on here![/color][/b][/url][/center]"
fit_content = true

[node name="Register" type="VBoxContainer" parent="UI/Main/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UserName" type="LineEdit" parent="UI/Main/MarginContainer/Register"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "UserName"

[node name="Password" type="LineEdit" parent="UI/Main/MarginContainer/Register"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Password"
secret = true

[node name="ConfirmPassword" type="LineEdit" parent="UI/Main/MarginContainer/Register"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Confirm Password"
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Main/MarginContainer/Register"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Register" type="Button" parent="UI/Main/MarginContainer/Register/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Register"

[node name="Back" type="Button" parent="UI/Main/MarginContainer/Register/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Back"

[node name="Log" type="RichTextLabel" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fit_content = true
script = ExtResource("2_ltgjr")
metadata/_custom_type_script = "uid://dqkal84v3u8ep"

[node name="Window" parent="UI" instance=ExtResource("4_2c55y")]
visible = false

[connection signal="pressed" from="UI/Main/MarginContainer/Login/HBoxContainer/Login" to="UI/Main" method="_on_login_pressed"]
[connection signal="meta_clicked" from="UI/Main/MarginContainer/Login/RegisterPrompt" to="UI/Main" method="_on_register_prompt_meta_clicked"]
[connection signal="pressed" from="UI/Main/MarginContainer/Register/HBoxContainer/Register" to="UI/Main" method="_on_register_pressed"]
[connection signal="pressed" from="UI/Main/MarginContainer/Register/HBoxContainer/Back" to="UI/Main" method="_on_back_pressed"]
